# cgse

./: CHANGELOG.md  pyproject.toml
libs/cgse-common/: pyproject.toml
libs/cgse-coordinates/: pyproject.toml
libs/cgse-coordinates/src/egse/coordinates/: pyplot.py
libs/cgse-core/: pyproject.toml
libs/cgse-core/src/egse/registry/: client.py
libs/cgse-gui/: pyproject.toml
projects/ariel/ariel-facility/: pyproject.toml
projects/ariel/ariel-tcu/: pyproject.toml
projects/generic/aim-tti-awg/: README.md  pyproject.toml
projects/generic/aim-tti-awg/src/aim_tti_awg/: cgse_explore.py  cgse_services.py  settings.yaml
projects/generic/aim-tti-awg/src/egse/arbitrary_wave_generator/aim_tti/: __init__.py  tgf4000.py  tgf4000.yaml  tgf4000_cs.py  tgf4000_devif.py  tgf4000_protocol.py
projects/generic/cgse-tools/: pyproject.toml
projects/generic/digilent/: pyproject.toml
projects/generic/keithley-tempcontrol/: pyproject.toml
projects/generic/kikusui-power-supply/: pyproject.toml
projects/generic/kikusui-power-supply/src/egse/power_supply/kikusui/pmx_a/: pmx_a.py  pmx_a_cs.py
projects/generic/lakeshore-tempcontrol/: pyproject.toml
projects/generic/symetrie-hexapod/: pyproject.toml
projects/generic/symetrie-hexapod/src/egse/hexapod/symetrie/: hexapod.py  joran.py  joran_cs.py  puna_cs.py  zonda_cs.py
projects/plato/plato-fits/: pyproject.toml
projects/plato/plato-hdf5/: pyproject.toml
projects/plato/plato-spw/: pyproject.toml
